# eis-d365-petinsure

./: .claudeignore  .gitignore  .mcp.json  AGENTIC_AI_PILOT_STUDY.md  AGENT_PIPELINE.md  ARCHITECTURE.md  AWS_DEPLOYMENT_FINAL_STATUS.md  AWS_WEBSOCKET_STANDARD.md  CLAUDE.md  CRITICAL_RULES.md  DATA_STORAGE.md  DEMO_WORKFLOW.md  DEPLOYMENT_CHECKLIST.md  DOCGEN_IMPLEMENTATION_PLAN.md  DOCGEN_IMPLEMENTATION_PLAN_V2.md  EIS-to-Dynamics365-POC-Report.docx  ENV_VARIABLES.md  HYBRID_ARCHITECTURE_PLAN.md  PORT_CONFIG.md  README.md  SESSION_CHANGELOG.md  SESSION_CONTINUE.md  START_HERE.md  STATE_MACHINE_DIAGRAM.md  TODO.md  TROUBLESHOOTING.md  compass_artifact_wf-5d8056d4-c886-4538-9af2-212fb5378bb9_text_markdown.md  deploy-aws.sh  destroy-aws.sh  diagrams_as_code.py  hybrid_cloud_architecture  overview.md  restart-all.sh  start-demo.sh  stop-all.sh
eis-dynamics-poc/: .env.example  .gitignore  Makefile  deploy-aws.sh  howto.md  pyproject.toml  pytest.ini  requirements-test.txt  run.sh  setup.sh
eis-dynamics-poc/config/: .env.example
eis-dynamics-poc/docs/: PIPELINE_VISUAL_FLOW.md  PRODUCTION_TOOLS_PLAN.md  README.md  RULE_VS_AI_COMPARISON.md  SESSION_SUMMARY.md  SHOWCASE_GUIDE.md  Technical-documentation.md  eis-dynamics-poc-documentation.html  index.html
eis-dynamics-poc/docs/api/: README.md  claims-api.md  eis-api.md  rating-api.md
eis-dynamics-poc/docs/architecture/: README.md  data-flow.md  index.html  infrastructure.md  overview.md  security.md
eis-dynamics-poc/docs/business-flows/: README.md  decision-logic.md  fnol-flow.md  quote-flow.md
eis-dynamics-poc/docs/diagrams/: 01-azure-architecture.mmd  02-medallion-flow.mmd  03-ai-pipeline.mmd  04-rule-vs-ai.mmd  EIS-Dynamics-Architecture.pptx  README.md  puml-01-architecture.puml  puml-02-medallion.puml  puml-03-ai-pipeline.puml  puml-04-comparison.puml
eis-dynamics-poc/docs/technical/: README.md  getting-started.md
eis-dynamics-poc/scripts/: convert_petinsure_data.py
eis-dynamics-poc/src/: .env.example
eis-dynamics-poc/src/shared/: pyproject.toml
eis-dynamics-poc/src/ws2_ai_claims/: requirements.txt
eis-dynamics-poc/src/ws3_integration/: requirements.txt
eis-dynamics-poc/src/ws4_agent_portal/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
eis-dynamics-poc/src/ws5_rating_engine/: requirements.txt
eis-dynamics-poc/src/ws6_agent_pipeline/: Dockerfile  requirements.txt
eis-dynamics-poc/tests/: __init__.py  conftest.py
(+513 files in other folders)
